# RI

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
libs/: CMakeLists.txt
libs/ri_convolve/: CMakeLists.txt
libs/ri_convolve/include/: ri_convolve.h  ri_fft_convolve.h  ri_karatsuba.h  ri_zerolatency_fft_convolve.h  ribara_convolve.h
libs/ri_convolve/src/: CMakeLists.txt  ri_fft_convolve.c  ri_karatsuba.c  ri_zerolatency_fft_convolve.c  ribara_convolve.c
libs/ri_fft/: CMakeLists.txt
libs/ri_fft/include/: ri_fft.h
libs/ri_fft/src/: CMakeLists.txt  ri_fft.c
libs/ri_ring_buffer/: CMakeLists.txt
libs/ri_ring_buffer/include/: ri_ring_buffer.h
libs/ri_ring_buffer/src/: CMakeLists.txt  ri_ring_buffer.c
plugins/simple_convolver/: CMakeLists.txt
plugins/simple_convolver/src/: .PluginEditor.cpp.swp  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
test/: CMakeLists.txt
test/ri_convolve/: CMakeLists.txt  main.cpp  ri_convolve_test.cpp  ri_fft_convolve_test.cpp  ri_karatsuba_test.cpp  ri_zerolatency_fft_convolve_test.cpp  ribara_convolve_test.cpp
test/ri_fft/: CMakeLists.txt  main.cpp
test/ri_ring_buffer/: CMakeLists.txt  main.cpp
